--- a/output_files.yaml
+++ b/output_files.yaml
@@ -4,6 +4,10 @@
 # these filepaths are relative to the project root.
 # DO NOT CHANGE THE KEYS OR SYNTAX
 
-best_verilog: "best_postrouting.v"
-best_blockages: "best_blockages.yaml"
-best_design_dat_folder: "design_file.dat"
+best_verilog: "best_results/best_postrouting.v"
+best_blockages: "best_results/best_blockages.yaml"
+best_design_dat_folder: "best_results/design_file.dat"
+best_def: "best_results/best_postrouting.def"
+best_lef: "best_results/NangateOpenCellLibrary.lef"
+best_gds: "best_results/NangateOpenCellLibrary.gds"
+
